@@ -25,14 +25,18 @@
     pchi[ntrm, ] <- sim$num
     df[ntrm:(ntrm + 1)] <- sim$df
     chi[ntrm:(ntrm + 1)] <- sim$chi
-    modelframe <- ordiGetData(object$call, NULL)
+    if (!is.null(object$call$data))
+        modelframe <- ordiGetData(object$call, NULL)
+    else
+        modelframe <- NULL
     environment(object$terms) <- environment()
     for (.ITRM in ntrm:2) {
         if (ntrm < 2) 
             break
         assign(".Random.seed", sim$Random.seed, envir = .GlobalEnv)
         fla <- as.formula(paste(" . ~ . -", trmlab[.ITRM]))
-        object <- update(object, fla, data = modelframe)
+        object <- update(object, fla,
+                         if (!is.null(modelframe)) data = modelframe)
         ## Change in data set due to missing values?
         if (length(object$residuals) != n0)
             stop("number of rows has changed: remove missing values?")
