@@ -48,7 +48,8 @@ function (formula, data, xlev = NULL, envdepth = 2, na.action = na.fail,
     ## Select a subset of data and species
     if (!is.null(subset)) {
         subset <- eval(subset,
-                       if (inherits(data, "data.frame")) cbind(data, X) else X,
+                       if (inherits(data, "data.frame")) cbind(data, X)
+                       else as.data.frame(X),
                        parent.frame())
         X <- X[subset, , drop = FALSE]
         if (NROW(mf) > 0)
