@@ -34,6 +34,10 @@ Version 1.18-21 (opened January 9, 2011)
 	anova.cca bug in vegan-forge). It seems that subset and na.action
 	also work. 
 
+	* anova.cca: most cases work now when terms are given in
+	attach()ed data frame after changes to anova.ccabyterm() and
+	ordiParseFormula(). 
+
 Version 1.18-20 (closed January 9, 2011)
 
 	* base of vegan release 1.17-6 (released on Jan 10, 2011).
